syntax = "proto3";

package notifications.v1;

option go_package = "internal/gen/notifications";

service NotificationService {
  rpc Notify(SubscribeRequest) returns (stream NotificationServiceNotifyResponse) {}
}

message Notification {
  string subid = 1;
  string text = 2;
  string sender = 3;
}

message NotificationServiceNotifyResponse {
  Notification notifications = 1;
}

message SubscribeRequest {
  string subid = 1;
}
